--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@
 
 /*** Category ***/
 .cat-item {
+                text-align: center;
     display: block;
     box-shadow: 0 0 45px rgba(0, 0, 0, .08);
     border: 1px solid transparent;
